--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 <section class=="chamada">
 <div class="chamada-texto">
 <h1>   Tom i Jerry po polsku | Trochę świeżego powietrza! | WB Kids      </h1>
-<p>Tom e jerry é muito legallll</p>
+<p>Pica pau é muito legallll.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_4S9H7J_HM4?si=ZRZsnsVh9jW5mlQu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
